2006-09-28  Matthieu Nottale  <nottale@gostai.com>

	Continued work on umake

	* sdk/param.mk.in: Rewrite in  progress. Generic makeile that will be called by umake.
	* umake/umake.in: Almost done, now invokes make with the right makefile and almost the right arguments.
	* configure.ac: Remove references to removed files in sdk.

2006-09-27  matthieu nottale  <nottale@gostai.com>

	Work on umake <TITLE> small fixes

	* src/liburbi/uobject/uobject.template.h: Fix hash_map declaration using urbi::hash_map_type. Change UBinary::parse prototype to fix a bug.
	* src/liburbi/uobject/common_uvalue.cc: Fix UBinary::parse to pass the list by reference.
	* umake/umake.in: Additional work on command line parsing: sort libs, headers and sources, handle directory arguments.

2006-09-26  Akim Demaille  <akim.demaille@free.fr>

	Fixes.
	* src/liburbi/uobject/uext.h: Add a missing "public".

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	* build-aux/urbi-dirs.m4 (_URBI_DIRS): New.
	(URBI_DIRS): Use it.
	(URBI_KERNEL_DIRS): New.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	* build-aux/urbi-dirs.m4: Pass the default urbi env.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	* build-aux/urbi-dirs.m4: Quote properly.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	Various.

	* sdk/Makefile.module.in: Rename as...
	* sdk/module.mk.in: this.
	* sdk/Makefile.param.in: Rename as...
	* sdk/param.mk.in: this.

	* build-aux/urbi-dirs.m4: Extensive changes for the new layout.
	* sdk/Makefile.am: Update to the new dir names.
	* src/liburbi/Makefile.am: Likewise.
	* src/liburbi/uobject/uexternal.h: Formatting changes.

	First stab, based on texi2dvi.
	* umake: New.
	* umake/umake.in: New.
	* configure.ac: Configure it.

2006-09-26  matthieu nottale  <nottale@gostai.com>

	Hash_map stuff

	* src/liburbi/Makefile.am: Add uext.h.
	* src/liburbi/uobject/uobject.template.h: Remove hash_map code moved to uext.h.