@@ -1,3 +1,10 @@
+2006-09-28  matthieu nottale  <nottale@gostai.com>
+
+	Work on umake
+
+	* sdk/param.mk.in: Will be the installed sdk makefile.
+	* umake/umake.in: Add --output option, remove output from $libraries variable in link mode.
+
 2006-09-28  Matthieu Nottale  <nottale@gostai.com>
 
 	Continued work on umake
